--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
             <div class="column has-text-centered publication-links">
               <span class="link-block">
-                <a href="https://github.com/oriyor/assistantbench/blob/main/resources/assistantbench.pdf" class="external-link button is-normal is-rounded">
+                <a href="https://arxiv.org/abs/2407.15711" class="external-link button is-normal is-rounded">
                   <span class="icon" style="height: 1.5em;">
                     <img src="./static/images/arxiv_icon.png" alt="arxiv icon" style="height: 1.5em;">
                   </span>
@@ -228,7 +228,7 @@
       <div class="column is-four-fifths">
         <div class="content has-text-justified">
           <h3 style="text-align: center;">About AssistantBench</h3>
-          <p style="text-align: left;">AssistantBench evaluates the ability of web agents to automatically solve realistic and time-consuming tasks. The benchmark includes 214 tasks covering multiple domains from more than 525 pages from 258 different websites. Please check out our <a href="https://arxiv.org/pdf/?" target="_blank">paper</a> for more details.</p>
+          <p style="text-align: left;">AssistantBench evaluates the ability of web agents to automatically solve realistic and time-consuming tasks. The benchmark includes 214 tasks covering multiple domains from more than 525 pages from 258 different websites. Please check out our <a href="https://arxiv.org/abs/2407.15711" target="_blank">paper</a> for more details.</p>
         </div>
       </div>
     </div>
@@ -406,13 +406,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <p><b>BibTeX</b></p>
-    <pre><code>@article{yoran-etal-2024-assistantbench,
-    title={AssistantBench: Can Web Agents Solve Realistic and Time-Consuming Tasks?},
-    author={Ori Yoran and Samuel Amouyal and Chaitanya Malaviya and Ben Bogin and Ofir Press and Jonathan Berant},
-    year={2024},
-    eprint={?},
-    archivePrefix={arXiv},
-    primaryClass={cs.CL}
+    <pre><code>@misc{yoran2024assistantbenchwebagentssolve,
+      title={AssistantBench: Can Web Agents Solve Realistic and Time-Consuming Tasks?},
+      author={Ori Yoran and Samuel Joseph Amouyal and Chaitanya Malaviya and Ben Bogin and Ofir Press and Jonathan Berant},
+      year={2024},
+      eprint={2407.15711},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2407.15711},
 }</code></pre>
   </div>
 </section>
